fixing all layout issue

--- a/src/app/components/completed/completed.css
+++ b/src/app/components/completed/completed.css
@@ -122,6 +122,56 @@
   justify-content: center;
 }
 
+/* no data style */
+
+.noDataTaskContainer {
+  margin-top: 5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  border-radius: 20px;
+  background-color: #f1f2f6;
+  letter-spacing: 0.8px;
+}
+
+.card {
+  height: 2%;
+  padding: 1rem;
+}
+
+.noDataCard-one {
+  width: 100%;
+  text-align: center;
+}
+.noDataCard-two {
+  letter-spacing: 0.8px;
+  width: 100%;
+}
+
+.noDataImage {
+  width: 50%;
+}
+
+.displayText {
+  margin-top: 2rem;
+  font-size: 2rem;
+  text-align: center;
+  font-size: 1.5rem;
+  letter-spacing: 0.4px;
+}
+
+.loadingImagecontainer {
+  height: 50vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+}
+
+.loadingImage {
+  width: 10%;
+}
+
 @media screen and (min-width: 1024px) {
   .card-container {
     width: 100%;
@@ -162,5 +212,17 @@
   }
   .header {
     margin-top: 0;
+  }
+
+  /* no data style */
+  .displayText {
+    font-size: 3rem;
+    margin-top: 12rem;
+  }
+  .noDataImage {
+    width: 70%;
+  }
+  .noDataTaskContainer {
+    flex-direction: row;
   }
 }
